<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TemperActivity">

    <EditText
        android:id="@+id/inpTemper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_txt"
        android:inputType="text" />

    <Button
        android:id="@+id/btnTemper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTemper"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/showTemper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/temper" />

</LinearLayout>