<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrameActivity"
    android:orientation="vertical">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_main"
        android:name="com.ibm.firstapp.HomeFragment"
        android:layout_weight="10"/>
    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_func"
        android:name="com.ibm.firstapp.FuncFragment"
        android:layout_weight="10"/>
    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_setting"
        android:name="com.ibm.firstapp.SettingFragment"
        android:layout_weight="10"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomGroup"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioHome"
            style="@style/rg_btn_style"
            android:drawableTop="@drawable/home"
            android:text="@string/rdo_home_label" />
        <RadioButton
            android:id="@+id/radioFunc"
            style="@style/rg_btn_style"
            android:drawableTop="@drawable/panda"
            android:text="@string/rdo_func_label"/>
        <RadioButton
            android:id="@+id/radioSetting"
            style="@style/rg_btn_style"
            android:drawableTop="@drawable/setting"
            android:text="@string/rdo_setting_label"/>
    </RadioGroup>

</LinearLayout>